Update gitignore and build script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "package": "",
-    "build": "electron-packager . TidalTimeTracker"
+    "buildwin": "electron-packager . TidalTimeTracker --overwrite --platform=win32 --arch=ia32 --prune=true --out=release-builds/win"
+    "buildmac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds/mac"
   },
   "repository": "",
   "keywords": [
