--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-chartjs": "^1.0.0",
     "electron-debug": "^2.1.0",
     "electron-json-storage": "^4.1.6",
+    "electron-preferences": "^1.3.0",
     "electron-window-state": "^5.0.3",
     "jquery": "^3.3.1"
   }
