--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-json-storage": "^4.1.6",
     "electron-preferences": "^1.3.0",
     "electron-window-state": "^5.0.3",
+    "export-from-json": "^1.1.3",
     "jquery": "^3.3.1"
   }
 }
