--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "description": "An application to track all your program usage.",
   "main": "main.js",
+  "build": {
+    "appId": "miningmark48.tidal-time-track",
+    "mac": {
+      "category": "miningmark48.tidal-time-track.utilty"
+    }
+  },
   "scripts": {
     "start": "electron .",
-    "package": "",
-    "buildwin": "electron-packager . TidalTimeTracker --overwrite --prune=true --out=release-builds/win",
-    "buildmac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds/mac"
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "repository": "",
   "keywords": [
@@ -19,7 +24,7 @@
   "devDependencies": {
     "asar": "^1.0.0",
     "electron": "^4.1.1",
-    "electron-packager": "^13.1.1",
+    "electron-builder": "^20.39.0",
     "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
@@ -31,6 +36,7 @@
     "electron-preferences": "^1.3.0",
     "electron-window-state": "^5.0.3",
     "export-from-json": "^1.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "react": "^16.8.6"
   }
 }
