--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron-chartjs": "^1.0.0",
     "electron-debug": "^2.1.0",
     "electron-json-storage": "^4.1.6",
+    "electron-log": "^3.0.5",
     "electron-preferences": "^1.3.0",
     "electron-window-state": "^5.0.3",
     "export-from-json": "^1.1.3",
