--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "erebuild": "./node_modules/.bin/electron-rebuild"
   },
   "repository": "",
   "keywords": [
@@ -23,8 +24,8 @@
   "license": "Apache 2.0",
   "devDependencies": {
     "asar": "^1.0.0",
-    "electron": "^4.1.4",
-    "electron-builder": "^20.39.0",
+    "electron": "^4.2.0",
+    "electron-builder": "^20.40.2",
     "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "electron-window-state": "^5.0.3",
     "export-from-json": "^1.1.3",
     "jquery": "^3.4.0",
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "ref": "^1.3.5"
   }
 }
