--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron-window-state": "^5.0.3",
     "export-from-json": "^1.1.3",
     "jquery": "^3.4.0",
+    "keytar": "^4.6.0",
     "react": "^16.8.6",
     "ref": "^1.3.5"
   }
