--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dist": "electron-builder",
     "erebuild": "./node_modules/.bin/electron-rebuild"
   },
-  "repository": "",
+  "repository": "https://github.com/MiningMark48/tidal-time-track-electron/",
   "keywords": [
     "time",
     "tracker"
