--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
+# Electron
 node_modules
 release-builds
 dist
 build
 
-preferences.json
-process-palette.json
+# Editor Directories
+.vscode
 
+# Editor Files
 *.sublime-project
 *.sublime-workspace
+process-palette.json
 
+# Specific Files
+preferences.json
 firebaseconfig.js
