--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidal-time-track",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An application to track all your program usage.",
   "main": "main.js",
   "build": {
@@ -12,10 +12,11 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder",
+    "dist": "electron-builder --x64",
+    "publish": "electron-builder --x64 -p always",
     "erebuild": "./node_modules/.bin/electron-rebuild"
   },
-  "repository": "MiningMark48/tidal-time-track-electron",
+  "repository": "git@github.com:MiningMark48/tidal-time-track-electron.git",
   "keywords": [
     "time",
     "tracker"
@@ -36,6 +37,7 @@
     "electron-json-storage": "^4.1.6",
     "electron-log": "^3.0.5",
     "electron-preferences": "^1.3.0",
+    "electron-updater": "^4.0.6",
     "electron-window-state": "^5.0.3",
     "export-from-json": "^1.1.3",
     "jquery": "^3.4.0",
